# random-latin-quotes

./: Cargo.toml  README.md
data/: quotes.json
src/: main.rs
