cargo-features = ["codegen-backend"]

[profile.dev]
codegen-backend = "cranelift"
incremental = true
opt-level = 0
debug = true

[package]
name = "random-latin-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
rand = "0.8.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
